--- a/CmdLineLib/CmdLineLib.nuspec
+++ b/CmdLineLib/CmdLineLib.nuspec
@@ -6,6 +6,7 @@
     <title>Command Line tools</title>
     <authors>Marc Mihalack</authors>
     <owners>Marc Mihalack</owners>
+    <projectUrl>https://github.com/marcmihalack/CmdLineLib</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>CmdLineLib allows to create mapping of method parameters to command line arguments, provides necessary conversion and generates help.  Highly configurable and flexible.</description>
     <summary>Strongly typed command line</summary>
