Fixing instance properties inclusion.  Fixing test setup. (#2)
* Fixing instance properties inclusion.  Fixing test setup.

* Inherited methods are not called.

* Adding IncludeInherited inclusion flag and handling inherited members accordingly.

* Adding Field test.

* Using correct arg comparison.  Setting nuget version.  Adding Release Notes.

--- a/CmdLineLib.Tests/CmdLineLib.Tests.csproj
+++ b/CmdLineLib.Tests/CmdLineLib.Tests.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Classes\TestClassStatic.cs" />
     <Compile Include="CmdLineTests.cs" />
     <Compile Include="MethodInclusionBase.cs" />
+    <Compile Include="MethodInclusion_IncludeInheritedTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MethodInclusion_DefaultIncludeAllTests.cs" />
     <Compile Include="MethodInclusion_IncludeAllStaticTests.cs" />
