Setting Version=1.1.1.  Adding release notes.

--- a/CmdLineLib/CmdLineLib.nuspec
+++ b/CmdLineLib/CmdLineLib.nuspec
@@ -12,8 +12,12 @@
     <description>CmdLineLib allows to create mapping of method parameters to command line arguments, provides necessary conversion and generates help.  Highly configurable and flexible.</description>
     <summary>Strongly typed command line</summary>
     <releaseNotes>
-    - Added IncludeInherited inclusion flags; inherited members are excluded by default.
-    - Fixed arg not found bug due to incorrect name comparison used.
+    1.1.1:
+      - Fixed handling of enum types when invalid value passed.
+      - Fixed handling of enum type with FlagsAttribute and multiple flags passed.
+    1.1.0:
+      - Added IncludeInherited inclusion flags; inherited members are excluded by default.
+      - Fixed arg not found bug due to incorrect name comparison used.
     </releaseNotes>
     <copyright>2013-2017 © Marc Mihalack. All rights reserved.</copyright>
     <language>en-US</language>
