Adding tests for invalid default value type. Adding more descriptive error for invalid default type.

--- a/CmdLineLib.Tests/CmdLineLib.Tests.csproj
+++ b/CmdLineLib.Tests/CmdLineLib.Tests.csproj
@@ -65,11 +65,11 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Classes\TestClassStatic.cs" />
     <Compile Include="CmdLineTests.cs" />
     <Compile Include="EnumParameterTests.cs" />
     <Compile Include="MethodInclusionBase.cs" />
     <Compile Include="MethodInclusion_IncludeInheritedTests.cs" />
+    <Compile Include="MethodWithInvalidDefaultValueTypeTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MethodInclusion_DefaultIncludeAllTests.cs" />
     <Compile Include="MethodInclusion_IncludeAllStaticTests.cs" />
