Adding conf draft.  Adding tty console.

--- a/CmdLineApp/App.config
+++ b/CmdLineApp/App.config
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
-    </startup>
+  <configSections>
+    <section name="CmdLine" type="CmdLineLib.Config.CmdLine, CmdLineLib"/>
+  </configSections>
+  <CmdLine argStartsWith="@">
+    <Parameters>
+      <add name="asdf" value="asdfa" />
+    </Parameters>
+  </CmdLine>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
+  </startup>
 </configuration>
