--- a/CmdLineLib/CmdLineLib.csproj
+++ b/CmdLineLib/CmdLineLib.csproj
@@ -49,6 +49,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -62,6 +63,7 @@
     <Compile Include="Attributes\CmdLineClassAttribute.cs" />
     <Compile Include="Attributes\CmdLineExcludeAttribute.cs" />
     <Compile Include="Attributes\CmdLineMethodAttribute.cs" />
+    <Compile Include="Config\CmdLineSection.cs" />
     <Compile Include="Definitions.cs" />
     <Compile Include="InclusionBehavior.cs" />
     <Compile Include="CmdLine.cs" />
@@ -75,6 +77,7 @@
     <Compile Include="IColorConsole.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="TTYColorConsole.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
