--- a/CmdLineLib.Tests/CmdLineLib.Tests.csproj
+++ b/CmdLineLib.Tests/CmdLineLib.Tests.csproj
@@ -66,6 +66,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="CmdLineTests.cs" />
+    <Compile Include="ConsoleTests.cs" />
     <Compile Include="EnumParameterTests.cs" />
     <Compile Include="MethodInclusionBase.cs" />
     <Compile Include="MethodInclusion_IncludeInheritedTests.cs" />
